infra/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
  namespace: demo
  labels:
    app: webapp
    color: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      color: canary
  template:
    metadata:
      labels:
        app: webapp
        color: canary
    spec:
      containers:
      - name: web
        image: demo/webserver:latest
        ports:
        - containerPort: 80
