infra/deployments-blue-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-blue
  namespace: demo
  labels:
    app: webapp
    color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
      color: blue
  template:
    metadata:
      labels:
        app: webapp
        color: blue
    spec:
      containers:
        - name: web
          image: demo/webserver:latest
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-green
  namespace: demo
  labels:
    app: webapp
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
      color: green
  template:
    metadata:
      labels:
        app: webapp
        color: green
    spec:
      containers:
        - name: web
          image: demo/webserver:latest
          ports:
            - containerPort: 80
