infra/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-canary-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: webapp
    color: canary
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
