infra/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: demo
spec:
  type: LoadBalancer
  selector:
    app: webapp
    color: blue
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
